个人简介修改，还原

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <h4>🚀 技能专长</h4>
               <div class="skills-list">
           <!-- UE核心技能 -->
-          <div class="skill-item">
+          <div class="skill-item skill-core">
             <div class="skill-icon-large">🎮</div>
             <div class="skill-content">
               <h3>Unreal Engine</h3>
