--- a/index.html
+++ b/index.html
@@ -320,70 +320,89 @@
       </div>
     </section>
 
-    <!-- 第4屏：产品展示 + 联系方式 -->
-    <section class="fullpage-section section-products-contact">
+    <!-- 第4屏：合作交流 -->
+    <section class="fullpage-section section-collaboration">
       <div class="section-content">
-        <h2 class="section-title">🎯 产品展示 & 联系方式</h2>
+        <h2 class="section-title">🤝 合作交流</h2>
 
-        <p class="products-intro">现阶段专注于 Unreal Engine 插件和开源项目开发，已发布多款开源项目和商业插件</p>
+        <div class="collaboration-card">
+          <div class="collaboration-content">
 
-        <div class="platform-links">
-          <a href="https://github.com/mengzhishanghun" target="_blank" class="platform-card github-card">
-            <div class="platform-icon">
-              <svg height="64" viewBox="0 0 16 16" width="64" fill="currentColor">
-                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
-              </svg>
+            <!-- 开源作品与平台 -->
+            <div class="collaboration-section">
+              <h4>🎨 开源作品与平台</h4>
+              <p class="section-intro">现阶段专注于 Unreal Engine 插件和开源项目开发，已发布多款开源项目和商业插件</p>
+
+              <div class="platform-list">
+                <a href="https://github.com/mengzhishanghun" target="_blank" class="platform-item">
+                  <div class="platform-icon-box">
+                    <svg height="48" viewBox="0 0 16 16" width="48" fill="currentColor">
+                      <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
+                    </svg>
+                  </div>
+                  <div class="platform-info">
+                    <h5>GitHub</h5>
+                    <p>开源项目与代码库</p>
+                    <span class="platform-link">mengzhishanghun →</span>
+                  </div>
+                </a>
+
+                <a href="https://www.fab.com/search?q=mengzhishanghun" target="_blank" class="platform-item">
+                  <div class="platform-icon-box">🛍️</div>
+                  <div class="platform-info">
+                    <h5>Fab Marketplace</h5>
+                    <p>商业插件发布平台</p>
+                    <span class="platform-link">查看我的产品 →</span>
+                  </div>
+                </a>
+
+                <a href="https://www.cnblogs.com/mengzhishanghun" target="_blank" class="platform-item">
+                  <div class="platform-icon-box">📝</div>
+                  <div class="platform-info">
+                    <h5>技术博客</h5>
+                    <p>技术文章与开发笔记</p>
+                    <span class="platform-link">访问博客园 →</span>
+                  </div>
+                </a>
+              </div>
             </div>
-            <h3>GitHub</h3>
-            <p>开源项目与代码库</p>
-            <span class="platform-link-text">mengzhishanghun</span>
-          </a>
 
-          <a href="https://www.fab.com/search?q=mengzhishanghun" target="_blank" class="platform-card fab-card">
-            <div class="platform-icon">🛍️</div>
-            <h3>Fab Marketplace</h3>
-            <p>商业插件发布平台</p>
-            <span class="platform-link-text">查看我的产品</span>
-          </a>
+            <!-- 合作与联系 -->
+            <div class="collaboration-section">
+              <h4>💼 合作与联系</h4>
+              <p class="section-intro">所有复杂，皆可封装；所有重复，皆可自动化 —— 期待与您合作</p>
 
-          <a href="https://www.cnblogs.com/mengzhishanghun" target="_blank" class="platform-card blog-card">
-            <div class="platform-icon">📝</div>
-            <h3>技术博客</h3>
-            <p>技术文章与开发笔记</p>
-            <span class="platform-link-text">访问博客园</span>
-          </a>
-        </div>
+              <div class="platform-list">
+                <div class="platform-item-static">
+                  <div class="platform-icon-box">🎯</div>
+                  <div class="platform-info">
+                    <h5>核心服务</h5>
+                    <p>UE 插件定制开发 · 蓝图脚本开发 · 引擎版本升级 · 崩溃问题修复 · 性能优化</p>
+                  </div>
+                </div>
 
-        <!-- 联系方式部分 -->
-        <h3 class="contact-section-title">📬 联系方式</h3>
+                <div class="platform-item-static">
+                  <div class="platform-icon-box">🤝</div>
+                  <div class="platform-info">
+                    <h5>合作方式</h5>
+                    <p>功能定制 · 周期定制 · 技术咨询 · 源码交付 · 可签 NDA · 持续维护</p>
+                  </div>
+                </div>
 
-        <div class="contact-container">
-          <div class="contact-card animate-fade">
-            <div class="contact-icon">🎯</div>
-            <h3>核心服务</h3>
-            <p>UE 插件定制开发 · 蓝图脚本开发<br>
-            引擎版本升级 · 崩溃问题修复 · 性能优化</p>
+                <div class="platform-item-static">
+                  <div class="platform-icon-box">✉️</div>
+                  <div class="platform-info">
+                    <h5>联系邮箱</h5>
+                    <p>
+                      <a href="mailto:mengzhishanghun@outlook.com" class="email-link">mengzhishanghun@outlook.com</a><br>
+                      <span class="email-note">通常24小时内回复 · 支持中英文沟通</span>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </div>
-
-          <div class="contact-card animate-fade delay-1">
-            <div class="contact-icon">🤝</div>
-            <h3>合作方式</h3>
-            <p>功能定制 · 周期定制 · 技术咨询<br>
-            源码交付 · 可签 NDA · 持续维护</p>
-          </div>
-
-          <div class="contact-card animate-fade delay-2">
-            <div class="contact-icon">✉️</div>
-            <h3>联系邮箱</h3>
-            <p>
-              <a href="mailto:mengzhishanghun@outlook.com" class="email-link">mengzhishanghun@outlook.com</a><br>
-              <span class="contact-hint">通常24小时内回复 · 支持中英文沟通</span>
-            </p>
-          </div>
-        </div>
-
-        <div class="contact-footer animate-fade delay-3">
-          <p>💡 <strong>让复杂问题简单化，让重复工作自动化 —— 期待与您合作！</strong></p>
         </div>
       </div>
     </section>
