--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <h1 class="animate-title">你好，我是 <span class="name-highlight">张靖宇</span></h1>
-        <p class="animate-subtitle">一个专注于 Unreal Engine 插件开发的独立开发者</p>
+        <p class="animate-subtitle">一个专注于 Unreal Engine 开发的独立开发者</p>
         <p class="animate-subtitle delay-1">致力于将复杂问题简单化，让重复工作自动化</p>
       </div>
     </section>
